2008-04-07  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c: Split up this now giant file a bit: Move the instruction 
	emission macros to ir-emit.h, and the various decompose functions to 
	decompose.c.

2008-04-05  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c: Move the if-conversion pass to branch-opts.c where it belongs.

	* mini.c: Enable MONO_OPT_SSA if abcrem or ssapre is enabled, so code only needs to
	check whenever SSA is enabled.

2008-04-02  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c (mono_branch_to_cmov): Rename this to mono_if_conversion ().

	* mini.h mini.c method-to-ir.c: Rename cfg->disable_extended_bblocks to 
	cfg->enable_extended_bblocks. Add some comments as to why it is currently 
	disabled.

2008-04-01  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_handle_global_vregs): Make the component vregs of a long
	vreg volatile if the IR also uses the original vreg.

	* mini.c (mono_compile_create_var_for_vreg): Only make the component vregs of
	a long vreg volatile if it is needed by optimizations.

	* mini-x86.c (mono_arch_emit_inst_for_method): Add support for Min/Max.

	* local-propagation.c (mono_local_cprop2): Avoid copy propagation if it would
	make it impossible to use reverse copy propagation later.
	
	* local-propagation.c (mono_local_cprop2): Make def_index a gint32, so the
	def_index checks actually work. Also, disable copy propagation for floats.

	* method-to-ir.c (mono_spill_global_vars): Avoid using a previous lvreg for the
	destination, since this makes little sense, and it makes the liveness interval of
	the lvreg longer, leading to worse generated code.

	* mini-s390.c (add_stackParm): Increase sz->stack_size.
	(mono_arch_allocate_vars): Handle vtype addresses passed on the stack.
	(mono_arch_output_basic_block): Fix OP_ADDCC.
	(mono_arch_decompose_long_opts): Remove OP_LADD, the generic code works for that
	too.

	* object.cs: Add tests for passing a vtype addr on the stack on s390.
	