@@ -1,5 +1,7 @@
 2008-04-07  Zoltan Varga  <vargaz@gmail.com>
 
+	* method-to-ir.c: Move the branch+bblock macros to ir-emit.h as well.
+	
 	* method-to-ir.c: Split up this now giant file a bit: Move the instruction 
 	emission macros to ir-emit.h, and the various decompose functions to 
 	decompose.c.
